--- a/src/meditation.html
+++ b/src/meditation.html
@@ -10,11 +10,11 @@
 	<body>
     <div id="bg-blur"></div>
     <div id="contents">
-      <div id="likes" class="like"></div>
-      <div><button id="pause" class="paused">Pause</button></div>
+      <div id="likes" class="like"></div>    
     </div>
     <div class="bottom bar">
         <a href="mailto:viba98@gmail.com" class = "bottom" id="feedback">Send Feedback</a>
+				<div><button id="pause" class="paused left">Pause</button></div>
     </div>
 	</body>
 </html>
